added minutes etc conversion

--- a/YoutubeTimer v1.1(EXP)/popup.html
+++ b/YoutubeTimer v1.1(EXP)/popup.html
@@ -12,7 +12,8 @@
   <body>
     <h1>YouTube Time Tracker</h1>
     <p>
-      Total time spent on YouTube: <span id="timeSpent">0</span> seconds
+      Total time spent on YouTube: <br>
+      <span id="timeSpent">0 days, 0 hours, 0 minutes, 0 seconds</span>
     </p>
     <script src="popup.js"></script>
   </body>
