--- a/YouTubeTimer_v1.2(EXP)/popup.html
+++ b/YouTubeTimer_v1.2(EXP)/popup.html
@@ -6,6 +6,7 @@
         font-family: Arial, sans-serif;
         text-align: center;
         margin: 15px;
+        min-width: 300px;
       }
     </style>
   </head>
